Updated list route and page for SQLite and reduced hamming of swapper database (#17, #20) Closes #20

--- a/templates/components/list_user.html
+++ b/templates/components/list_user.html
@@ -1,29 +1,20 @@
-{% macro user(shaketag, data, is_initiate) %}
-	{% if 'do_not_send' in data %}
-		<div class = 'rounded list-user {{ "border-yellow" if "warning_hash" in data else "border-red" }}' data-shaketag = {{ shaketag }}>
+{% macro user(data, is_initiate) %}
+	{% if not data[2] == None %}
+		<div class = 'rounded list-user {{ "border-yellow" if data | length == 4 else "border-red" }}' data-shaketag = {{ data[0] }}>
 	{% else %}
-		<div class = 'rounded list-user' data-shaketag = {{ shaketag }}>
+		<div class = 'rounded list-user' data-shaketag = {{ data[0] }}>
 	{% endif %}
 		<div class = 'list-user-header flex-row'>
-			<div>{{ shaketag }}</div>
+			<div>{{ data[0] }}</div>
 			<div class = 'list-user-control'>
-				<button type = 'submit' class = 'delete' value = '{{ shaketag }}' onclick = remove_list_user(this)><i class="far fa-trash-alt"></i></button>
-				{% if 'do_not_send' in data and is_initiate %}
-					<button type = 'submit' value = '{{ shaketag }}' class = 'list-ignore list-warning {{ "contained" if "warning_hash" in data else "emphasis" }}' onclick = list_ignore_warning(this)>IGNORE WARNING</button>
+				<button type = 'submit' class = 'delete' value = '{{ data[0] }}' onclick = remove_list_user(this)><i class="far fa-trash-alt"></i></button>
+				{% if not data[2] == None and is_initiate %}
+					<button type = 'submit' value = '{{ data[0] }}' class = 'list-ignore list-warning {{ "contained" if data | length == 4 else "emphasis" }}' onclick = list_ignore_warning(this)>IGNORE WARNING</button>
 				{% endif %}
 			</div>
 		</div>
-		{% if 'do_not_send' in data %}
-			<div class = 'list-user-status'>{{ data['do_not_send'] }}</div>
+		{% if not data[2] == None %}
+			<div class = 'list-user-status'>{{ data[2] }}</div>
 		{% endif %}
-		<div class = 'divider'></div>
-		<div class = 'list-user-buttons flex-row'>
-			<p>Don't send for:</p>
-			<div>
-				<button type = 'submit' value = '{{ shaketag }}-1' class = 'list-warning {{ "contained" if "delay_state" in data and data["delay_state"] == 1 else "emphasis" }}' onclick = list_ignore_time(this)>1hr</button>
-				<button type = 'submit' value = '{{ shaketag }}-8' class = 'list-warning {{ "contained" if "delay_state" in data and data["delay_state"] == 8 else "emphasis" }}' onclick = list_ignore_time(this)>8hr</button>
-				<button type = 'submit' value = '{{ shaketag }}-0' class = 'list-warning {{ "contained" if "delay_state" in data and data["delay_state"] == 0 else "emphasis" }}' onclick = list_ignore_time(this)>until reset</button>
-			</div>
-		</div>
 	</div>
 {% endmacro %}
