--- a/templates/list.html
+++ b/templates/list.html
@@ -1,12 +1,11 @@
 {% from 'components/list_user.html' import user %}
-{% from 'components/reorder-modal.html' import reorder %}
 
 {% extends 'layout.html' %}
 
 {% block body %}
 	<div class = 'flex-col list-wrapper'>
 		<div class = 'list-header flex-row'>
-			<div class = rounded>
+			<div class = 'rounded'>
 				<h2>List</h2>
 				<div class = 'list-info-wrapper'>
 					<p style = 'margin-bottom: 0.25rem;'>Add people to your daily send list!</p>
@@ -27,15 +26,15 @@
 					</div>
 				</div>
 			</div>
-			<div class = 'rounded list-info flex-col'>
-				<div class = 'list-info-content'>
-					<h2>time left until next auto swap:</h2>
-					<h2>12hr 30mins</h2>
-				</div>
-				<div class = 'list-info-buttons flex-row'>
+			<div class = 'list-info flex-col rounded'>
+				<div class = 'list-info-buttons'>
 					<button id = 'clear-list' type = 'submit' class = 'emphasis border-red' onclick = trigger_delete_modal()>CLEAR LIST</button>
 					<button id = 'edit-list' type = 'submit' class = 'contained' onclick = edit_list(this)>EDIT LIST</button>
 					<button id = 'send' type = 'submit' class = 'contained'>SEND ALL</button>
+				</div>
+				<div class = 'divider'></div>
+				<div class = 'list-time-left'>
+					time left
 				</div>
 			</div>
 		</div>
@@ -70,12 +69,15 @@
 		</div>
 	</div>
 
-	{{ reorder() }}
+	<div id = 'modal-wrapper' class = 'hidden'>
+		<div id = 'modal-content' class = 'rounded flex-col'></div>
+	</div>
 
 	<script>
 		function add_shaketags(event) {
 			event.preventDefault();
 
+			// set the submit button to be disabled and loading
 			let submit = document.getElementById('list-add-submit');
 			set_loading(submit);
 			submit.disabled = true;
@@ -185,11 +187,116 @@
 			});
 		}
 
-		function edit_list() {
-			document.getElementById('modal-wrapper').classList.toggle('hidden');
+		function edit_list(event) {
+			console.log(event);
+			let modal = document.getElementById('modal-wrapper');
+
+			if (modal.classList.contains('hidden')) {
+				// clear old content
+				let content = document.getElementById('modal-content');
+				content.innerHTML = '';
+
+				// client is opening the edit menu, load data
+				fetch('/list/modify/')
+				.then((data) => {
+					if (data.ok) return data.json()
+				})
+				.then((json) => {
+					for (let data of json) {
+						// create div for this user
+						let div = document.createElement('div');
+						div.id = `reorder-${data[0]}`;
+						div.classList.add('rounded', 'list-draggable');
+
+						// enable drag and drop
+						div.draggable = true;
+
+						div.textContent = `${data[0]} ${data[1]}`;
+
+						content.append(div);
+					}
+				})
+			}
+
+			modal.classList.toggle('hidden');
 		}
 
+		// register buttons
 		document.getElementById('submit').addEventListener('submit', add_shaketags);
 		document.getElementById('send').addEventListener('click', send_list);
+
+		// register modal closing
+		window.addEventListener('load', () => {
+			let modal = document.getElementById('modal-wrapper');
+
+			if (modal) {
+				modal.addEventListener('click', (e) => {
+					modal.classList.toggle('hidden');
+				})
+			}
+		});
+
+		// register drag and drop for reordering list
+		// https://stackoverflow.com/questions/21339924/drop-event-not-firing-in-chrome
+		// https://stackoverflow.com/questions/44415228/list-sorting-with-html5-dragndrop-drop-above-or-below-depending-on-mouse
+		
+		document.addEventListener('dragstart', (event) => {
+			let target = event.target;
+			event.dataTransfer.setData('text/plain', target.id);
+		});
+
+		document.addEventListener('dragover', (event) => {
+			let target = event.target;
+
+			if (target.classList.contains('list-draggable')) {
+				// get the bounding information of the element are hovering over
+				let element_bounds = target.getBoundingClientRect();
+
+				// calculate the Y of the middle of this element
+				let mid_point = element_bounds.y + (element_bounds.height / 2);
+
+				// check if we are above or below the mid point
+				// -tive: cursor is above mid point
+				// +tive: cursor is below mid point
+				if (event.clientY - mid_point > 0) {
+					target.style['border-bottom'] = '1px solid red';
+					target.style['border-top'] = '';
+				} else {
+					target.style['border-top'] = '1px solid red';
+					target.style['border-bottom'] = '';
+				}
+			}
+
+			// required on chromium to trigger drop event
+			event.preventDefault();
+		});
+
+		document.addEventListener('dragleave', (event) => {
+			let target = event.target;
+
+			if (target.classList.contains('list-draggable')) {
+				target.style['border-top'] = '';
+				target.style['border-bottom'] = '';
+			}
+		});
+
+		document.addEventListener('drop', (event) => {
+			console.log('drop', event)
+			let target = event.target;
+			let transfer_element = document.getElementById(event.dataTransfer.getData('text/plain'));
+
+			if (target.classList.contains('list-draggable')) {
+				if (target.style['border-top'] !== '') {
+					target.parentNode.insertBefore(transfer_element, target);
+				} else {
+					target.parentNode.insertBefore(transfer_element, target.nextElementSibling);
+				}
+			}
+
+			target.style['border-top'] = '';
+			target.style['border-bottom'] = '';
+
+			event.preventDefault();
+		});
 	</script>
 {% endblock %}
